# snake-drl

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: plot_metrics.py
snake_drl/: __main__.py  agent.py  curriculum.py  env.py  memory.py  model.py  play.py  train.py  utils.py
tests/: test_smoke.py
